syntax = "proto3";

package pb;

service SyncState {
    rpc RcvPlayer (RcvPlayerRequest) returns (RcvPlayerResponse) {
    }
    rpc SyncPlayer (SyncPlayerRequest) returns (SyncPlayerResponse) {
    }
}

message Vector3 {
    double x = 1;
    double y = 2;
    double z = 3;
}

message SyncPos {
    uint32 ID = 1;
    Vector3 pos = 2;
    int64 Timestamp = 3;
}

message SyncPlayerRequest {
    uint32 ID = 1;
    Vector3 pos = 2;
    int64 Timestamp = 3;
}

message SyncPlayerResponse {
    uint32 ID = 1;
}

message RcvPlayerRequest {
    uint32 ID = 1;
}

message RcvPlayerResponse {
    uint32 ID = 1;
    Vector3 pos = 2;
}